got rid of bike, could add later to query request
